--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fusionstrings Nginx</title>
-	<script type="module" src="/js/main.js"></script>
+	<title>Document</title>
 </head>
 <body>
-	<h1>Fusionstrings Nginx</h1>
+	<h1>Unit 🚢</h1>
 </body>
 </html>
